htick (1.0.1-1) stable; urgency=low

  * Htick 1.0 release

 -- Pavel Andreew <pavel@collage.etel.ru>  Wed,  6 Nov 2002 13:04:51 +0500

htick (1.0.0-20020918-1) stable; urgency=low

  * New cvs version (1.0-RC2)

 -- Pavel Andreew <pavel@collage.etel.ru>  Wed, 18 Sep 2002 15:02:42 +0600

htick (1.0.0-20020905-1) stable; urgency=low

  * New cvs version
  * Install sample configs into /etc/husky

 -- Pavel Andreew <pavel@collage.etel.ru>  Thu,  5 Sep 2002 08:29:21 +0600

htick (1.0.0-20020827-1) stable; urgency=low

  * New cvs version (1.0-RC1)
  * Place /etc/filefix.hlp into /etc/husky
  * Place misc scripts into doc/misc

 -- Pavel Andreew <pavel@collage.etel.ru>  Tue, 27 Aug 2002 16:27:54 +0600

htick (1.0.0-20020815-2) stable; urgency=low

  * debian/copyright: new http-location of sources

 -- Pavel Andreew <pavel@collage.etel.ru>  Mon, 26 Aug 2002 12:09:54 +0600

htick (1.0.0-20020815-1) stable; urgency=low

  * Take sources from new CVS at sourceforge.net
  * Setup new location for apt: http://husky.sourceforge.net/debian
  * Create new ftn user, if not exist

 -- Pavel Andreew <pavel@collage.etel.ru>  Fri, 16 Aug 2002 17:19:51 +0600

htick (1.0.0-20020801-1) stable; urgency=low

  * New Maintainter
  * Add HISTORY and BUG-REPORTING to doc dir

 -- Pavel Andreew <pavel@collage.etel.ru>  Wed, 31 Jul 2002 03:49:21 +0600

htick (1.0.0-20020702-1) stable; urgency=low

  * New cvs version
  * debian/docs: remove TODO
  * debian/postinst: fix typo

 -- Pavel Andreew <pavel@collage.etel.ru>  Wed,  3 Jul 2002 19:39:11 +0600

htick (1.0.0-20020626-1) stable; urgency=low

  * NMU. Joerg, big thanks for Debian packages! But we don't see you now
    :-(
  * Change scheme of versions numbers: include CVS date
  * Update Standards - 3.5.6 now
  * Setuid/setgid htick binary for user 'ftn'

 -- Pavel Andreew <pavel@collage.etel.ru>  Sun, 30 Jun 2002 04:57:16 +0600

htick (0.9-4) unstable; urgency=low

  * Hey, im back. New package.