@@ -42,7 +42,7 @@ INFODIR=$(PREFIX)/share/info
 # The same as above, but for HTML documentation. This requires a working
 # "texi2html" program.
 #HTMLDIR=$(PREFIX)/lib/husky
-HTMLDIR=$(PREFIX)/share/doc/$(PACKAGE)/html
+HTMLDIR=$(PREFIX)/share/doc/$(PACKAGE)
 
 # Name of the config file of MSGED TE:
 MSGEDCFG=\"$(CFGDIR)/msged.cfg\"
