@@ -27,7 +27,6 @@ build-stamp:
 	dh_testdir
 	# Add here commands to compile the package.
 	$(MAKE)
-	#/usr/bin/docbook-to-man debian/htick.sgml > htick.1
 	touch build-stamp
 
 clean:
@@ -36,6 +35,7 @@ clean:
 	rm -f build-stamp configure-stamp
 	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
+	cd doc; $(MAKE) distclean
 	dh_clean
 
 install: build
@@ -48,6 +48,8 @@ install: build
 	cp misc/config debian/htick/etc/husky/config.htick
 	cp misc/fileareas misc/filefix.* debian/htick/etc/husky/
 	cp misc/purge_fileecho misc/st_htick.pl $(CURDIR)/debian/htick/usr/share/doc/htick/misc/
+	cd doc; $(MAKE) all install DESTDIR=$(CURDIR)/debian/htick
+	rm -f $(CURDIR)/debian/htick/usr/share/info/dir*
 
 # Build architecture-independent files here.
 binary-indep: build install
