@@ -48,7 +48,7 @@ char *print_ch(int len, char ch)
 
 const int VER_MAJOR   = 1;
 const int VER_MINOR   = 0;
-const int VER_PATCH   = 0;
+const int VER_PATCH   = 1;
 
 /* branch is "" for CVS current, "-stable" for the release candiate branch  */
 const char *VER_BRANCH  = "-stable";
